--- a/E-Ticaret/Proje.DataAccess/Proje.DataAccess.csproj
+++ b/E-Ticaret/Proje.DataAccess/Proje.DataAccess.csproj
@@ -59,7 +59,7 @@
     <Compile Include="Banner.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
-    <Compile Include="Class1.cs" />
+    <Compile Include="DbConnection.cs" />
     <Compile Include="Favoriler.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
